--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@material-ui/icons": "^3.0.2",
     "antd": "^3.13.2",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.1.0",
+    "gatsby": "^2.8.6",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-less": "^2.0.11",
     "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
+    "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-remark-code-titles": "^1.0.2",
@@ -26,7 +26,7 @@
     "gatsby-remark-katex": "^3.0.3",
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.9",
-    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-source-filesystem": "^2.0.38",
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.13",
     "katex": "^0.10.0",
@@ -41,7 +41,8 @@
     "react-typography": "^0.16.18",
     "styled-components": "^4.1.3",
     "typography": "^0.16.18",
-    "typography-theme-kirkham": "^0.16.18"
+    "typography-theme-kirkham": "^0.16.18",
+    "url-join": "^4.0.0"
   },
   "keywords": [
     "gatsby"
